lab3/service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-deploy
spec:
  selector:
    matchLabels:
      app: service1
  replicas: 1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: tr1ckste/service1:0.1
        ports:
        - containerPort: 8080
