lab3/root.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-service
spec:
  ports:
    - port: 8080
      targetPort: 8000
  selector:
    app: root
