lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/service1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 8080
          - path: /api/service2
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 8080
          - path: /api/root
            pathType: Prefix
            backend:
              service:
                name: root-service
                port:
                  number: 8080
